--- a/static/css/_layout.css
+++ b/static/css/_layout.css
@@ -15,6 +15,7 @@
     position: sticky;
     top: -80px;
     background-color: white;
+    z-index: 1;
 }
 
 #main {
